# gigmate

./: .dockerignore  .gitignore  DatasetPickle.py  Dockerfile  Dockerfile.serve  Dockerfile.training  README.md  config.yaml  constants.py  dataset.py  entrypoint.sh  hyperparameter_search.py  init.py  model.py  notebook.ipynb  preprocess.py  pyproject.toml  requirements.txt  test.py  tokenizer.json  tokenizer.py  tokenizer_model  tox.ini  train.py  vertex_config.deployment.yaml  vertex_config.training.yaml  vertex_config.yaml
.github/workflows/: deployment.yml  gcp_training.yml  python-app.yml  training_image.yml
.gradient/workflows/: dataset.yaml  training.yaml  workflow.yaml
processing/: pipeline.py
processing/steps/: augment.py  split.py  tokenize.py
src/gigmate/: DatasetPickle.py  audio_delay_measurement.py  audio_sync_test.py  audio_utils.py  client.py  constants.py  dataset.py  hyperparameter_search.py  midi_conversion.py  midi_conversion_test.py  model.py  model_checkpoint.py  play.py  play.test.py  play_test.py  predict.py  predict_test.py  prediction.py  serve.py  test.py  test_midi_conversion.py  tokenizer.py  train.py
src/gigmate/__fixtures__/: midi_fixtures.py
src/gigmate/api/: complete_audio.py  complete_audio_file.py  complete_audio_file_test.py  complete_midi.py  convert_to_midi.py  latest_concat_map.py
src/gigmate/data_preprocessing/: cluster.py  constants.py  dataset.py  pipeline.py  prepare.py  process.py  utils.py
src/gigmate/data_preprocessing/steps/: augment.py  augment_check.py  convert_to_ogg.py  distort.py  distort_check.py  encode.py  merge.py  merge_test.py  split.py  tokenize.py  uncompress.py  upload.py
src/gigmate/dataset/: dataset.py  dataset_test.py
src/gigmate/domain/: complete_track.py  midi_conversion.py  midi_conversion.test.py  midi_conversion_test.py  predict.py  predict.test.py  predict_test.py  prediction.py  prediction_test.py  sampling.py  sampling_test.py  test_midi_conversion.py
src/gigmate/model/: cached_multihead_attention.py  cached_multihead_attention_test.py  codec copy.py  codec.py  codec_test copy.py  codec_test.py  decoder.py  encoder.py  model.py  model_checkpoint.py  model_test.py  tokenizer.py  transformer_block.py  utils.py
src/gigmate/model/audio_to_audio/: model.py
src/gigmate/model/musicgen/: model.py
src/gigmate/processing/: pipeline.py  process.py
src/gigmate/processing/steps/: augment.py  split.py  tokenize.py
src/gigmate/scripts/: audio_delay_measurement.py  audio_sync.py  audio_sync_test.py  beat_sync_test.py
src/gigmate/training/: greedy_lr.py  hyperparameter_search.py  quantize.py  train.py  training_model.py  training_model_test.py
src/gigmate/utils/: audio_utils.py  constants.py  device.py  env.py  sequence_utils.py  sequence_utils_test.py
