[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gigmate"
dynamic = ["version"]
description = 'MIDI generation'
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Michele Lugano", email = "michele.lugano9@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "clearml==1.16.3",
    "kaggle==1.6.17",
    "lightning==2.4.0",
    "miditok @ git+https://github.com/Natooz/MidiTok@2281c4ffc58030176fa2dbd25fb5e8d62345908b",
    "symusic==0.5.2",
    "numpy<2.0.0",
    "scipy==1.14.1",
    "scikit_learn==1.5.2",
    "torch==2.4.0",
    "torchinfo==1.8.0",
    "torchmetrics==1.4.1",
    "tqdm==4.66.5",
    "tensorboard==2.15.1",
    "tensorflow==2.15.1",
    "tensorrt; platform_system != 'Darwin'",
    "positional-encodings[pytorch]==6.0.3",
    "pyfluidsynth==1.3.3",
    "litserve==0.2.2",
    "onnx",
    "uvloop",
    "python-multipart==0.0.9",
    "sounddevice==0.5.0",
    "pretty-midi==0.2.10",
    "positional_encodings==6.0.3",
    "pydub==0.25.1",
    "demucs==4.0.1",
    "basic_pitch==0.4.0",
    "basic-pitch[onnx]==0.4.0"
]

[project.urls]
Documentation = "https://github.com/Michele Lugano/gigmate#readme"
Issues = "https://github.com/Michele Lugano/gigmate/issues"
Source = "https://github.com/Michele Lugano/gigmate"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
path = "src/gigmate/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gigmate tests}"

[tool.coverage.run]
source_pkgs = ["src/gigmate"]
branch = true
parallel = true
omit = [
  "src/gigmate/__about__.py",
]

[tool.coverage.paths]
gigmate = ["src/gigmate", "*/gigmate/src/gigmate"]
tests = ["tests", "*/gigmate/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]
train = "python -m gigmate.train"
dataset = "python -m gigmate.dataset"
test = "pytest --disable-warnings"
process = "python -m gigmate.processing.pipeline"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
  "src"
]