[tool.poetry]
name = "gigmate"
description = "Generation of realtime music using transformers"
readme = "README.md"
version = "0.1.0"  # Set a static version or use versioning tool later
authors = ["Michele Lugano <michele.lugano9@gmail.com>"]
license = "MIT"
keywords = []
repository = "https://github.com/energydrink9/gigmate"
homepage = "https://github.com/energydrink9/gigmate#readme"
documentation = "https://github.com/energydrink9/gigmate#readme"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
packages = [{include = "gigmate", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
clearml = "1.16.4"
lightning = "2.4.0"
numpy = "<2.0.0"
scipy = "1.12"
scikit-learn = "1.5.2"
torchinfo = "1.8.0"
torchmetrics = "1.4.2"
tqdm = "4.66.5"
tensorboard = "2.15.1"
tensorrt = { version = "*", markers = "platform_system != 'Darwin'" }
pyfluidsynth = "1.3.3"
litserve = "0.2.2"
onnx = "*"
uvloop = "*"
"python-multipart" = "0.0.9"
sounddevice = "0.5.0"
pydub = "0.25.1"
#demucs = { git = "https://github.com/adefossez/demucs.git", rev = "b9ab48cad45976ba42b2ff17b229c071f0df9390" }
reactivex = { git = "https://github.com/ReactiveX/RxPY.git", rev = "be64ef3d759d38f4e0198704fe6578cff96ea21c" }
websockets = "12.0"
"websocket-client" = "1.8.0"
soundfile = "*"
encodec = "^0.1.1"
huggingface-hub = "^0.25.1"
transformers = "^4.45.1"
tokenizers = "^0.20.0"
torchao = "^0.5.0"
torch = "^2.4.1"
torchaudio = "^2.4.1"
audiomentations = "^0.36.0"
pyroomacoustics = "^0.7.7"
torcheval = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pydub-stubs = "^0.25.1.1"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
types-tqdm = "^4.66.0.20240417"
types-requests = "^2.32.0.20240914"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["src"]
testpaths = ["src"]

[tool.coverage.run]
source = ["src/gigmate"]
branch = true
parallel = true
omit = ["src/gigmate/__about__.py"]

[tool.coverage.paths]
source = ["src/gigmate", "*/gigmate/src/gigmate"]
tests = ["tests", "*/gigmate/**/*_test.py"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.poetry.scripts]
train = "gigmate.training.train:main"
